# GetFit-FastAPI-Backend-Service

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
getfit/: main.py
getfit/db/: connection.py
getfit/dto/: authapi.py  drinkapi.py  mealapi.py
getfit/model/: drink_model.py  meal_model.py  member_model.py
getfit/repository/: drink_repo.py  meal_repo.py  members_repo.py
getfit/services/: authservice.py  drinkservice.py  jwtservice.py  mealservice.py
secrets/: DBHOST
test/: test_auth_api.py
test/integration/: auth_integration_test.py  conftest.py
test/unit/: test_auth_api.py
