[project]
name = "GetFit"
version = "0.1.0"
description = "fitness tracker api"
authors = [
    {name = "Joe Muldowney",email = "joseph.h.muldowney@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pymysql (>=1.2.0,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "uvicorn-worker (>=0.4.0,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.21,<0.16.0)"
]
